# DrugsAndPills

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: icon.aps  icon.rc
src/: files.h  fonts.h  image_library.cpp  image_library.h  main.cpp  messages.h  png_reader.cpp  png_reader.h  record.cpp  record.h  record_checker.cpp  record_checker.h  serializer.cpp  serializer.h  settings.cpp  settings.h  time_utils.cpp  time_utils.h  ui_consts.h
src/wnd/: main_wnd.cpp  main_wnd.h  notification_wnd.cpp  notification_wnd.h  panel_wnd.cpp  panel_wnd.h  record_list_wnd.cpp  record_list_wnd.h  record_wnd.cpp  record_wnd.h  settings_wnd.cpp  settings_wnd.h  setup_record_wnd.cpp  setup_record_wnd.h  wnd_base.cpp  wnd_base.h
